--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, html {
   position: absolute;
   top: 30%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  /*transform: translate(-50%, -50%); */
   color: white;
 }
 
