--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body, html {
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:40px">Visualizing Learning Across Pakistan</h1>
+    <h1 style="font-size:40px">Visualizing Learning Across <font color="green">Pakistan</font></h1>
     <br><br>
     <p>And I'm a Photographer</p>
     <button>Hire me</button>
