--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ body, html {
   position: absolute;
   top: 30%;
   left: 50%;
-  /*transform: translate(-50%, -50%); */
+  transform: translate(-50%, -50%);
   color: white;
 }
 
@@ -48,7 +48,8 @@ body, html {
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:40px">Visualizing Learning Across Pakistan</h1>
+    <h1 style="font-size:40px">Visualizing Learning Across  <font color="green">Pakistan</font></h1>
+   
     <br><br>
     <p>And I'm a Photographer</p>
     <button>Hire me</button>
