--- a/index.html
+++ b/index.html
@@ -27,21 +27,6 @@ body, html {
   color: white;
 }
 
-.hero-text button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 10px 25px;
-  color: black;
-  background-color: #ddd;
-  text-align: center;
-  cursor: pointer;
-}
-
-.hero-text button:hover {
-  background-color: #555;
-  color: white;
-}
 </style>
 </head>
 <body>
@@ -49,10 +34,7 @@ body, html {
 <div class="hero-image">
   <div class="hero-text">
     <h1 style="font-size:40px">Visualizing Learning Across  <font color=#006400>Pakistan</font></h1>
-   
-    <br><br>
     <p>And I'm a Photographer</p>
-    <button>Hire me</button>
   </div>
 </div>
 
@@ -60,3 +42,18 @@ body, html {
 
 </body>
 </html>
+
+.container {
+  position: relative;
+}
+
+/* Bottom text */
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  right: 50px;
+  background-color: black;
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
