--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@ body, html {
   </div>
 </div>
 
-
+<div class="hero-image">
+  <div class="container">
+   <div class="text-block">
+    <p>What a beautiful sunrise</p>
+   </div>
+  </div>
+</div>
 
 </body>
 </html>
