--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@ body, html {
 
 <div class="hero-image">
   <div class="hero-text">
-    <h1 style="font-size:40px">Visualizing Learning Across  <font color=#006400>Pakistan</font></h1>
+    <h1 style="font-size:40px">Visualizing Learning Across <font color=#006400>Pakistan</font></h1>
   </div>
 </div>
 
 
   <div class="container">
    <div class="text-block">
-    <p>What a beautiful sunrise</p>
+    <p>After the passage of the 18th Amendment in 2012 in Pakistan, educational administration became a provincial subject. Since then, there has been a keen interest among various stakeholders to explore education indicators like subject proficiency and percentage of enrollment at the provincial and district level. 
+      This website utilizes data from the 2018 Annual State of Education Report (ASER) to provide visualizations that seek to address this interest.</p>
    </div>
   </div>
 </div>
