--- a/index.html
+++ b/index.html
@@ -9,25 +9,9 @@ body, html {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.hero-image {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("school_photo_1.jpg");
-  height: 100%;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-}
-
-.hero-text {
-  text-align: center;
-  position: absolute;
-  top: 20%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  color: white;
-}
 
 </style>
+<link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -49,17 +33,3 @@ body, html {
 </body>
 </html>
 
-.container {
-  position: relative;
-}
-
-/* Bottom text */
-.text-block {
-  position: absolute;
-  bottom: 20px;
-  right: 50px;
-  background-color: black;
-  color: white;
-  padding-left: 20px;
-  padding-right: 20px;
-}
