--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@ body, html {
   <div class="container">
    <div class="text-block">
     <p>After the passage of the 18th Amendment in 2012 in Pakistan, educational administration became a provincial subject. Since then, there has been a keen interest among various stakeholders to explore education indicators like subject proficiency and percentage of enrollment at the provincial and district level. 
-      This website utilizes data from the 2018 Annual State of Education Report (ASER) to provide visualizations that seek to address this interest.</p>
+      This website utilizes data from the 2018 <a href="http://aserpakistan.org/index.php">Annual State of Education</a> Report to provide visualizations that seek to address this interest.</p>
+
    </div>
   </div>
 </div>
